# constelario

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
constelario/: __init__.py  _packaging.py  _tabular.py  edges.py  graph.py  icons.py  model.py  strings.py  theme.py
constelario/assets/: viewer.html
examples/: basico.py  customizado.py  de_base.py
tests/: test_constelario.py
